@@ -295,6 +295,9 @@ By default the pages of the virtual desktop are separated by
 dashed lines in the pager window.  This option causes FvwmPager to
 use solid lines instead.
 
+.IP "*FvwmPagerNoSeparators"
+Turns off the lines separating the pages of the virtual desktop.
+
 .IP "*FvwmPagerBalloons [\fItype\fP]"
 Show a balloon describing the window when the pointer is moved into
 a window in the pager. Currently only the window's icon name is shown.
