@@ -106,6 +106,7 @@ int MoveThreshold = DEFAULT_MOVE_THRESHOLD;
 int ShowBalloons = 0, ShowPagerBalloons = 0, ShowIconBalloons = 0;
 Bool do_focus_on_enter = False;
 Bool use_dashed_separators = True;
+Bool use_no_separators = False;
 char *BalloonTypeString = NULL;
 char *BalloonBack = NULL;
 char *BalloonFore = NULL;
@@ -1925,6 +1926,11 @@ void ParseOptions(void)
     else if (StrEquals(resource, "SolidSeparators"))
     {
       use_dashed_separators = False;
+      use_no_separators = False;
+    }
+    else if (StrEquals(resource, "NoSeparators"))
+    {
+      use_no_separators = True;
     }
     /* ... and get Balloon config options ...
        -- ric@giccs.georgetown.edu */
