@@ -1,3 +1,10 @@
+1999-11-09  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmPager/FvwmPager.c: (ParseOptions):
+	* FvwmPager/x_pager.c (DrawGrid):
+	(DrawIconGrid):
+	new option 'NoSeparators'
+
 1999-11-04  Hippo
 
 	* FvwmScroll/*.c, FvwmDragWell/*.c: use fvwmlib_client_window()
